--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.2",
     "axios": "^1.1.2",
     "next": "12.3.1",
     "react": "18.2.0",
@@ -16,6 +17,13 @@
   },
   "devDependencies": {
     "eslint": "8.25.0",
-    "eslint-config-next": "12.3.1"
+    "eslint-config-next": "12.3.1",
+    "@heroicons/react": "^2.0.11",
+    "autoprefixer": "^10.4.12",
+    "postcss": "^8.4.16",
+    "prettier": "^2.7.1",
+    "prettier-plugin-tailwindcss": "^0.1.13",
+    "tailwind-scrollbar": "^2.0.1",
+    "tailwindcss": "^3.1.8"
   }
 }
