--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
   "dependencies": {
     "@babel/eslint-parser": "^7.19.1",
     "@headlessui/react": "^1.7.2",
+    "@hookform/resolvers": "^2.9.8",
     "axios": "^1.1.2",
     "next": "12.3.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-hook-form": "^7.37.0",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@heroicons/react": "^2.0.11",
